--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,4 @@
 dash==1.19.0
-dash-core-components==1.15.0
 dash-html-components==1.1.2
-dash-renderer==1.9.0
-dash-table==4.11.2
-Flask==1.1.2
-Flask-Compress==1.9.0
+dash-bootstrap-components==0.11.3
 gunicorn==20.0.4
-pandas==1.2.3
-plotly==4.14.3
-requests==2.25.1
